# p2p-secure-chat

./: .coverage  .env.example  .gitignore  DEVELOPMENT.md  Procfile  README.md  pyproject.toml  pytest.ini  requirements.txt
data/: chat.db
data/db/: chat.db.bak  test.db
data/users/0/: user.db
data/users/7584962234/: user.db
scripts/: generate_keys.py
src/: __init__.py  main.py  relay_server.py  server.py  test_network.py  test_p2p.py
src/ui/: __init__.py  chat_widget.py  contact_list.py  login_widget.py  main_window.py
src/utils/: __init__.py  connection_manager.py  crypto.py  database.py  discovery.py  event_handlers.py  network.py  network_test.py  relay_server.py  stun_client.py  turn_client.py
tests/: conftest.py  test_database.py  test_network.py  test_ui.py
