[tool.poetry]
name = "talkabout"
version = "0.1.0"
description = "A P2P chat application"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.6.1"
websockets = "^12.0"
aiosqlite = "^0.19.0"
netifaces = "^0.11.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.1"
pystun3 = "^1.0.0"
cryptography = "^44.0.0"
sqlalchemy = "^2.0.37"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-qt = "^4.2.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 